changed variable names

--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        {% if rater.canSee %}
+        {% if rater.can_see %}
         <div class="row">
             <div class="col-sm-12 row">
                 <span class="font-lora col-sm-3">Current Rating:</span>
