--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -14,18 +14,6 @@
         <a href="#" class="exit"><img src="{% static 'ratings/images/exit.png' %}" width="20" height="20"></a>
     {% endif %}
     <div class="padding-15 no-edit">
-        <!-- <div class="row">
-            <div class="col-sm-12 row">
-                <span class="font-lora col-sm-3">User Name:</span>
-                <div class="col-sm-9">{{ name }}</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 row">
-                <span class="font-lora col-sm-3">User Id:</span>
-                <div class="col-sm-9">{{ user.userid }}</div>
-            </div>
-        </div> -->
         <div class="row">
             <div class="col-sm-12 row">
                 <span class="font-lora col-sm-3">About:</span>
@@ -33,7 +21,7 @@
             </div>
         </div>
 
-        {% if rater.canSee %}
+        {% if rater.can_see %}
         <div class="row">
             <div class="col-sm-12 row">
                 <span class="font-lora col-sm-3">Current Rating:</span>
@@ -49,31 +37,20 @@
         </div>
         {% endif %}
 
-        {% if ratingFound %}
-            <div class="row">
-                <div class="col-sm-12 row">
-                    <span class="font-lora col-sm-3">Current Rating by You:</span>
-                    <div class="col-sm-9">{{ current_rated }}</div>
-                </div>
+        {% if not current %}
+        <div class="row">
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">Current Rating by You:</span>
+                <div class="col-sm-9">{{ current_rated }}</div>
             </div>
-          <!-- <div class="row">
-                <div class="col-sm-12 row">
-                    <span class="font-lora col-sm-3">All Reviews</span>
-                    <div class="col-sm-9">{{together}}</div>
-                </div>
-            </div>-->
+        </div>
 
-            <div class="row">
-                    <div class="col-sm-12 row">
-                        <span class="font-lora col-sm-3">Current Review by You:</span>
-                        <div class="col-sm-9">{{ current_review }}</div>
-                    </div>
-            </div>
-        <!-- <div class="row">
-                <div class="col-sm-12">
-                    <span class="font-lora">Either you are the same user or this rating doesn't exist.</span>
+        <div class="row">
+                <div class="col-sm-12 row">
+                    <span class="font-lora col-sm-3">Current Review by You:</span>
+                    <div class="col-sm-9">{{ current_review }}</div>
                 </div>
-        </div> -->
+        </div>
         {% endif %}
 
         <div class="row">
@@ -84,7 +61,7 @@
         <div class="container" style="margin-left:20px;">
             <table class="table">
             <tbody>
-                    {% for work in works %}
+                    {% for work in works_together %}
                         <tr><div class="card work-card">{{ work }}</div></tr>
                     {% endfor %}
             </tbody>
@@ -127,22 +104,7 @@
         </form>
         {% endif %}
         {% if current %}
-        <!--<table class="table">
-            <thead class="thead-light">
-                <tr>
-                    <th scope="col" class="col-sm-3">Rating</th>
-                    <th scope="col" class="col-sm-9">Review</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for rating in rating_list %}
-                <tr>
-                    <td > <strong>{{ rating.rating }}</strong> </td>
-                    <td > {{rating.review}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>-->
+
         <table class="table">
             <thead class="thead-light">
                 <tr>
@@ -161,15 +123,16 @@
         </table>
         {% endif %}
     </div>
+
     {% if current %}
     <div class="padding-15 edit-form">
         {% if workform and updateform %}
         <div class="row">
             <div class="col-sm-12 row">
-              {%if works%}
+              {%if works_together%}
                 <span class="font-lora col-sm-3">Works:</span>
                 <div class="col-sm-9">
-                        {% for work in works %}
+                        {% for work in works_together %}
                             <div class="card work-card">{{ work }}</div>
                         {% endfor %}
                         <!--{% for t in works_together %}
