--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -108,8 +108,10 @@
         <table class="table">
             <thead class="thead-light">
                 <tr>
-                    <th scope="col" class="col-sm-3">Rating</th>
-                    <th scope="col" class="col-sm-9">Review</th>
+                    <!-- <th scope="col" class="col-sm-3">Rating</th>
+                    <th scope="col" class="col-sm-9">Review</th> -->
+                    <th scope="col" style="width: 20%">Rating</th>
+                    <th scope="col" style="width: 80%"><center>Review</center></th>
                 </tr>
             </thead>
             <tbody>
